chore: duty message for small self-explanatory changes

--- a/src/make.conf
+++ b/src/make.conf
@@ -1,6 +1,3 @@
-Sample `/etc/portage/make.conf`
-
-```
 # example setup: /usr/share/portage/config/make.conf.example
 # online resource: https://wiki.gentoo.org/wiki//etc/portage/make.conf
 
@@ -24,11 +21,11 @@ FEATURES="candy downgrade-backup unmerge-backup"
 
 # GENTOO_MIRRORS
 
+# specify make arguments when packages are built
 # get using lspu or nproc
 NPROC=4
 LOAD_AVG=3.75 # ~ 0.9 of NPROC
-
-# specify make arguments when pacakges are built
+# specify make arguments when packages are built
 MAKEOPTS="--jobs ${NPROC} --load-average ${LOAD_AVG}"
 
 # variable definiing entries appended to emerge
@@ -36,7 +33,7 @@ MAKEOPTS="--jobs ${NPROC} --load-average ${LOAD_AVG}"
 # TODO idea to explore is buildpkg feature, see usepkg=y, binpkg-changed-deps=y, binpkg-respect-use=y
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --jobs ${NPROC} --load-average ${LOAD_AVG}"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --keep-going y"
-EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --verbose y --quiet y"
+EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --verbose y"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --tree"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --autounmask-write"
 
@@ -46,7 +43,8 @@ EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --autounmask-write"
 # PKGDIR; location store binary packages
 
 # system wide setting or deactivation of flags
-USE="bash-completion -zsh-completion -bluetooth -dvd -dvdr branding -emacs -gnome -gnome-keyring -kde X -wayland"
+USE="bash-completion -zsh-completion -bluetooth -dvd -dvdr branding \
+-emacs X -wayland networkmanager -gnome -gnome-keyring -kde pulseaudio xinerama"
 
 # global software licenses definition
 ACCEPT_LICENSE="-* @FREE"
@@ -67,4 +65,3 @@ VIDEO_CARDS="intel i965"
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C.utf8
-```
