--- a/src/make.conf
+++ b/src/make.conf
@@ -43,8 +43,7 @@ EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --autounmask-write"
 # PKGDIR; location store binary packages
 
 # system wide setting or deactivation of flags
-USE="bash-completion -zsh-completion -bluetooth -dvd -dvdr branding \
--emacs X -wayland networkmanager -gnome -gnome-keyring -kde pulseaudio xinerama"
+USE="branding"
 
 # global software licenses definition
 ACCEPT_LICENSE="-* @FREE"
