--- a/src/make.conf
+++ b/src/make.conf
@@ -53,13 +53,13 @@ LINGUAS="en en_US"
 
 # CPU_FLAGS_*; use cpuid2cpuflags
 
-#INPUT_DEVICES="synaptics libinput"
+# INPUT_DEVICES=""
 
 # see supported values: grep -i portuguese /var/db/repos/gentoo/profiles/desc/l10n.desc
 # determine which extra localization support to install
 # L10N
 
-#VIDEO_CARDS="intel i965"
+# VIDEO_CARDS=""
 
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
