--- a/src/make.conf
+++ b/src/make.conf
@@ -53,7 +53,7 @@ LINGUAS="en en_US"
 
 # CPU_FLAGS_*; use cpuid2cpuflags
 
-# INPUT_DEVICES=""
+INPUT_DEVICES="libinput synaptics"
 
 # see supported values: grep -i portuguese /var/db/repos/gentoo/profiles/desc/l10n.desc
 # determine which extra localization support to install
