--- a/src/make.conf
+++ b/src/make.conf
@@ -35,7 +35,7 @@ EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --jobs ${NPROC} --load-average ${LOA
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --keep-going y"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --verbose y"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --tree"
-EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --autounmask-write"
+EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --autounmask --autounmask-write"
 
 # PORTAGE_SCHEDULING_POLICY; portage niceness
 # PORTAGE_TMPDIR; location of temporary files
