--- a/src/make.conf
+++ b/src/make.conf
@@ -24,7 +24,8 @@ FEATURES="candy downgrade-backup unmerge-backup"
 # specify make arguments when packages are built
 # get using lspu or nproc
 NPROC=4
-LOAD_AVG=3.75 # ~ 0.9 of NPROC
+# limit load to ~ 0.9 of NPROC
+LOAD_AVG=3.75 
 # specify make arguments when packages are built
 MAKEOPTS="--jobs ${NPROC} --load-average ${LOAD_AVG}"
 
