work in progress, find comments statrting WIP

--- a/src/make.conf
+++ b/src/make.conf
@@ -25,7 +25,7 @@ FEATURES="candy downgrade-backup unmerge-backup"
 # get using lspu or nproc
 NPROC=4
 # limit load to ~ 0.9 of NPROC
-LOAD_AVG=3.75 
+LOAD_AVG=3.75
 # specify make arguments when packages are built
 MAKEOPTS="--jobs ${NPROC} --load-average ${LOAD_AVG}"
 
@@ -37,6 +37,7 @@ EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --keep-going y"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --verbose y"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --tree"
 EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --autounmask --autounmask-write"
+EMERGE_DEFAULT_OPTS="${EMERGE_DEFAULT_OPTS} --changed-use"
 
 # PORTAGE_SCHEDULING_POLICY; portage niceness
 # PORTAGE_TMPDIR; location of temporary files
